# Latent-Diffusion-With-CLIP

./: .gitignore  CLAUDE.md  README.md  app.py  environment.yaml  main.py  pyproject.toml  requirements.txt
configs/latent-diffusion/: custom-ldm-kl-8.yaml  lsun_churches-ldm-kl-8.yaml  txt2img-clip-ldm-kl-8.yaml
ldm/data/: lsun.py  simple.py
ldm/models/diffusion/: ddim.py  ddpm.py  plms.py
ldm/modules/encoders/: modules.py
linear_probing_latent_space_analysis/: README.md
scripts/: analyze_latent_space.py  diagnose_latent_space.py  probe_building_size.py
