[project]
name = "latent-diffusion"
version = "0.0.1"
description = "Latent Diffusion Models"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "numpy",
    "tqdm",
    "albumentations==1.3.1",
    "opencv-python==4.8.1.78",
    "pudb==2022.1.3",
    "imageio==2.31.6",
    "imageio-ffmpeg==0.4.9",
    "pytorch-lightning==1.9.5",
    "omegaconf==2.3.0",
    "test-tube>=0.7.5",
    "streamlit>=0.73.1",
    "einops==0.6.1",
    "torch-fidelity==0.3.0",
    "transformers>=4.19.2",
    "wandb",
    "python-dotenv",
    "taming-transformers @ git+https://github.com/CompVis/taming-transformers.git@master",
    "clip @ git+https://github.com/openai/CLIP.git@main",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = {} }
